# vscode-example-project

./: .env  .gitignore  Readme.md  vscode-example-project.code-workspace
component_1/: README.md  pyproject.toml
component_1/src/component_1/: main.py
component_1/tests/: test_main.py
component_2/: README.md  pyproject.toml
component_2/src/component_2/: main.py
component_2/tests/: test_main.py
component_3/: README.md  main.py  pyproject.toml
component_3/src/component_3/: main.py
component_3/tests/: test_main.py
