[tool.poetry]
name = "component-2"
version = "0.1.0"
description = ""
authors = ["julianfrenzel <26822719+b0lle@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "component_2", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.7"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
